--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-fiftyone
+fiftyone>0.17.0
 setuptools>=59.1.1
 pytest>=6.2.2
 pytest-cov>=3.0.0
 numpy~=1.23.2
+openexr>=1.3.9
 pillow~=9.0.1
+pyquaternion>=0.9.9
 -i https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple
-pysolotools>=0.5.1
+pysolotools>=0.8.0
