--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -5,10 +5,10 @@ name: Publish to pypi
 on:
   push:
     branches:
-      - chore/public-pypi
+      - main
   pull_request:
     branches:
-      - chore/public-pypi
+      - main
 
 jobs:
   publish:
@@ -24,6 +24,7 @@ jobs:
       - name: Build a binary wheel and a source tarball
         run: python -m build --sdist --wheel --outdir dist/
       - name: Publish distribution to PyPI
+        if: startsWith(github.ref, 'refs/tags')
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           password: ${{ secrets.PYPI_API_TOKEN }}
