--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -19,9 +19,11 @@ jobs:
       - name: Install pypa/build
         run: python -m pip install build --user
       - name: Build a binary wheel and a source tarball
-        run: python -m build --sdist --wheel --outdir dist/
+        run: |
+          echo $GITHUB_REF_NAME
+          python -m build --sdist --wheel --outdir dist/
       - name: Publish distribution to PyPI
-        if: ${{ github.ref == 'refs/heads/main' }}
+        if: {{ $GITHUB_REF_NAME }} == 'main'
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           password: ${{ secrets.PYPI_API_TOKEN }}
