--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ pytest>=6.2.2
 pytest-cov>=3.0.0
 numpy~=1.23.2
 openexr>=1.3.8
-pillow~=9.0.1
+pillow>=9.0.1
 pyquaternion>=0.9.9
 pysolotools>=0.3.17
